# WatterSupply-D.A

./: .gitignore  CMakeLists.txt  README.md
data/small_data/: Reservoirs_Madeira.csv
docs/: Doxyfile
src/: main.cpp
src/managers/: FailureManager.cpp  FailureManager.h  FlowManager.cpp  FlowManager.h  ReliabilityManager.cpp  ReliabilityManager.h
src/models/: DeliverySite.cpp  DeliverySite.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Reservoir.cpp  Reservoir.h  Station.cpp  Station.h  Vertex.cpp  Vertex.h  VertexEdge.cpp  VertexEdge.h
src/utils/: Dataset.cpp  Dataset.h
src/views/: FailuresMenu.cpp  FailuresMenu.h  MainMenu.cpp  MainMenu.h  Menu.h  MetricsMenu.cpp  MetricsMenu.h  ReliabilityMenu.cpp  ReliabilityMenu.h
